<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/zodiac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:alpha="1"
        android:text="@string/TextView"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_spring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="57dp"
        android:background="@android:color/holo_green_light"
        android:onClick="onClickSpring"
        android:text="@string/spring"
        app:layout_constraintBottom_toTopOf="@+id/button_autumn"
        app:layout_constraintEnd_toStartOf="@+id/button_summer"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zodiac" />

    <Button
        android:id="@+id/button_summer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="49dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/summer"
        app:layout_constraintBottom_toTopOf="@+id/button_winter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zodiac"
        app:layout_constraintVertical_bias="0.438" />

    <Button
        android:id="@+id/button_autumn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginBottom="128dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/autumn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_winter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:background="@android:color/white"
        android:text="@string/winter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_summer" />
</androidx.constraintlayout.widget.ConstraintLayout>